added more parts of the resume, start working on mailing list

--- a/app/src/main/res/layout/contact.xml
+++ b/app/src/main/res/layout/contact.xml
@@ -6,7 +6,7 @@
     android:padding="16dp">
 
     <TextView
-        android:text="CONTACT"
+        android:text="@string/contact"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
