--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/colorAccent">
-                <include layout="@layout/java_android"/>
+                <include layout="@layout/experience"/>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/colorAccent">
-                <include layout="@layout/experience"/>
+                <include layout="@layout/java_android"/>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/colorAccent">
-                <include layout="@layout/java_android"/>
+                <include layout="@layout/skills"/>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
@@ -124,11 +124,11 @@
     <android.support.v7.widget.CardView
         android:id="@+id/my_card_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="300dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:visibility="gone"
-        app:cardBackgroundColor="@color/colorPrimaryDark">
-        <include layout="@layout/contact" />
+        app:cardBackgroundColor="@color/colorPrimary">
+        <include layout="@layout/mailing" />
     </android.support.v7.widget.CardView>
 
 
