--- a/app/src/main/res/layout/education.xml
+++ b/app/src/main/res/layout/education.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="EDUCATION"
+        android:text="@string/education"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
