--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:text="PROFILE"
+        android:text="@string/profile"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
-        android:text="@string/profile"
+        android:text="@string/profile_text"
         android:textStyle="italic"
         android:textSize="18sp"
         android:layout_margin="10dp"
