--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,23 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/colorAccent">
-                <include layout="@layout/java_android"/>
+                <include layout="@layout/tools"/>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@color/colorAccent">
+                <include layout="@layout/lang"/>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@color/colorAccent">
+                <include layout="@layout/hobby"/>
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
@@ -93,10 +109,10 @@
             >
 
             <ImageView
-                android:src="@drawable/zz"
+                android:src="@drawable/ja"
                 app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="400dp"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 android:minHeight="100dp" />
