--- a/app/src/main/res/layout/hobby.xml
+++ b/app/src/main/res/layout/hobby.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:text="@string/tools"
+        android:text="@string/hobby"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="Android Studio | Eclipse | IntelliJ IDEA"
+            android:text="Dance | Sports | Travel | Books | Cooking"
             android:textSize="18sp"
             android:layout_margin="5dp"
             android:textStyle="bold"
@@ -27,5 +27,7 @@
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
+
+    <include layout="@layout/photos"/>
 
 </LinearLayout>
