added buterknife, sections of resume changed to drop down text views

--- a/app/src/main/res/layout/lang.xml
+++ b/app/src/main/res/layout/lang.xml
@@ -15,8 +15,14 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:id="@+id/lang_text"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginLeft="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -56,7 +62,6 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginLeft="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -96,7 +101,6 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginLeft="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -136,7 +140,6 @@
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginLeft="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -172,6 +175,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"/>
         </LinearLayout>
+    </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
