--- a/app/src/main/res/layout/hobby.xml
+++ b/app/src/main/res/layout/hobby.xml
@@ -13,6 +13,12 @@
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+<LinearLayout
+    android:id="@+id/hobby_text"
+    android:visibility="gone"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -29,5 +35,6 @@
     </LinearLayout>
 
     <include layout="@layout/photos"/>
+</LinearLayout>
 
 </LinearLayout>
