--- a/app/src/main/res/layout/java_android.xml
+++ b/app/src/main/res/layout/java_android.xml
@@ -15,6 +15,8 @@
         android:layout_marginBottom="10dp"/>
 
     <TextView
+        android:id="@+id/java_text"
+        android:visibility="gone"
         android:text="@string/bootcamp_text"
         android:textStyle="italic"
         android:textSize="18sp"
