--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
+        android:id="@+id/profile_text"
+        android:visibility="gone"
         android:text="@string/profile_text"
         android:textStyle="italic"
         android:textSize="18sp"
