--- a/app/src/main/res/layout/tools.xml
+++ b/app/src/main/res/layout/tools.xml
@@ -15,6 +15,8 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:id="@+id/tools_text"
+        android:visibility="gone"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
