--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -11,7 +11,8 @@
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"/>
     <TextView
         android:id="@+id/profile_text"
         android:visibility="gone"
