--- a/app/src/main/res/layout/education.xml
+++ b/app/src/main/res/layout/education.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/education"
         android:text="@string/education"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
