--- a/app/src/main/res/layout/experience.xml
+++ b/app/src/main/res/layout/experience.xml
@@ -6,6 +6,7 @@
     android:padding="16dp">
 
     <TextView
+        android:id="@+id/experience"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
