--- a/app/src/main/res/layout/lang.xml
+++ b/app/src/main/res/layout/lang.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/lang"
         android:text="@string/lang"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
